--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -1,8 +1,8 @@
 {% extends 'core/base.html' %}
 {% block content %}
     <div class="flex h-full flex-col justify-center">
-        <div class="mx-auto w-full max-w-2xl p-4 text-center">
-            <div class="border-brand-text shadow-neo border-2 bg-white p-8">
+        <div class="mx-auto w-full max-w-2xl p-2 text-center">
+            <div class="border-brand-text shadow-neo border-2 bg-white px-4 py-8 md:px-8">
                 <h1 class="text-4xl font-bold tracking-widest uppercase">Create an Account</h1>
                 <p class="text-brand-text mt-2 text-lg">
                     Save your Bibliotype to track your history & share it with friends.
@@ -36,12 +36,12 @@
                                 />
                             {% endif %}
 
-                            {% if field.help_text %}<p class="mt-2 text-sm text-gray-600">
-                                {{ field.help_text|safe }}
-                            </p>{% endif %}
-                            {% for error in field.errors %}<p class="mt-2 text-sm font-bold text-red-600 uppercase">
-                                {{ error }}
-                            </p>{% endfor %}
+                            {% if field.help_text %}
+                                <p class="mt-2 text-sm text-gray-600">{{ field.help_text|safe }}</p>
+                            {% endif %}
+                            {% for error in field.errors %}
+                                <p class="mt-2 text-sm font-bold text-red-600 uppercase">{{ error }}</p>
+                            {% endfor %}
                         </div>
                     {% endfor %}
                     <button
